# 2048Haskell

./: 2048Haskell.cabal  README.md
src/: BotGame.hs  HumanGame.hs  Logic.hs  Main.hs
