cabal-version:      >=1.10
name:               2048Haskell
version:            0.1.0.1
license:            BSD3
license-file:       LICENSE
copyright:          2017 Ashwin Jeyaseelan, Sang-Kyun Han
author:             Ashwin Jeyaseelan, Sang-Kyun Han
homepage:           https://github.com/8Gitbrix/2048Haskell#readme
category:           Web
build-type:         Simple
extra-source-files: README.md

source-repository head
    type:     git
    location: https://github.com/8Gitbrix/2048Haskell

executable 2048Haskell
    main-is:          Main.hs
    hs-source-dirs:   src
    other-modules:
        Logic
        HumanGame
        BotGame

    default-language: Haskell2010
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N
    build-depends:
        base >=4.14.2.0 && <4.15,
        brick ==0.64.*,
        containers >=0.6.4.1 && <0.7,
        linear >=1.21.6 && <1.22,
        random >=1.2.0 && <1.3,
        vty ==5.33.*

test-suite 2048Haskell-test
    type:             exitcode-stdio-1.0
    main-is:          Test.hs
    hs-source-dirs:   test
    other-modules:    Logic
    default-language: Haskell2010
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N
